Step One Complete

--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 <body>
     <header class= "header">
         <div class= "logo">
-            Personal Portfolio
+            Home
         </div>
         <nav class="nav">
             
@@ -24,7 +24,7 @@
     </header>
 
     <main>
-        
+        <img class="image" src="wk301-198.png" alt="SideImage" width="300">
     </main>
 
     <footer>
