--- a/about.html
+++ b/about.html
@@ -23,10 +23,15 @@
     </header>
 
     <main>
-        <video width="400" height="200" controls>
-            <source src="Screen Recording 2025-08-20 015044.mp4" type="video/mp4">
+        <img class="image" src="wk301-198.png" alt="SideImage" width="300">
+
+        <div class="video">
+            <video width="400" height="200" controls poster="wk301-22.png">
+            <source src="IMG_3554.mp4" type="video/mp4">
             Your browser does not support the video tag
-        </video>
+            </video>
+        </div>
+        
     </main>
 
     <footer>
